# h-benchmark

./: .gitignore  ADVANCED_EXCEPTIONS_IMPLEMENTATION.md  BENCHMARK_LEADERBOARD.md  CHANGELOG.md  CODE_GRADE_RESPONSE.md  CONTRIBUTING.md  GITHUB_SETUP.md  LICENSE  PUSH_INSTRUCTIONS.md  PUSH_NOW.md  README.md  README_QUICKSTART.md  REPO_SUMMARY.md  benchmark_history.json  pyproject.toml  requirements.txt  setup.py
.github/workflows/: benchmark_leaderboard.yml  tests.yml
examples/: basic_usage.py  parameter_sweep.py
src/zkaedi_prime_engine/: __init__.py  benchmark.py  engine.py  exceptions.py  leaderboard.py
src/zkaedi_prime_engine/exceptions/: README.md  __init__.py  base.py  demo.py  diagnostics.py  evolution.py  explainable.py  fsm.py  healing.py  rich_traceback.py  swarm.py
tests/: test_advanced_exceptions.py  test_benchmark.py  test_zkaedi_prime_engine.py  test_zkaedi_prime_engine_enhanced.py
