[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zkaedi-prime-engine"
version = "1.0.0"
description = "Unified quantum computing engine with recursive Hamiltonian evolution"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "zkaedii", email = "ideakzkaedi@outlook.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=1.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
benchmark = [
    "psutil>=5.8.0",
]
all = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "psutil>=5.8.0",
]

[project.scripts]
zkaedi-benchmark = "zkaedi_prime_engine.benchmark:main"
zkaedi-leaderboard = "zkaedi_prime_engine.leaderboard:main"

[project.urls]
Homepage = "https://github.com/zkaedii/h-benchmark"
Documentation = "https://github.com/zkaedii/h-benchmark#readme"
Repository = "https://github.com/zkaedii/h-benchmark"
Issues = "https://github.com/zkaedii/h-benchmark/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.setuptools.packages.find]
where = ["src"]

